@@ -2,13 +2,13 @@ package io.codemodder.providers.sarif.semgrep;
 
 import com.contrastsecurity.sarif.SarifSchema210;
 import java.io.IOException;
-import java.net.URISyntaxException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
+import org.apache.commons.io.IOUtils;
 
 /** This is the memoizing Semgrep runner that we'll give to codemods. */
 final class DefaultSemgrepSarifProvider implements SemgrepSarifProvider {
@@ -20,14 +20,15 @@ final class DefaultSemgrepSarifProvider implements SemgrepSarifProvider {
   }
 
   @Override
-  public SarifSchema210 getSarif(final Path repository, final String rulePath)
-      throws IOException, URISyntaxException {
+  public SarifSchema210 getSarif(final Path repository, final String rulePath) throws IOException {
     if (sarifs.containsKey(rulePath)) {
       return sarifs.get(rulePath);
     }
 
-    String ruleYaml =
-        Files.readString(Paths.get(getClass().getClassLoader().getResource(rulePath).toURI()));
+    InputStream ruleInputStream = getClass().getClassLoader().getResource(rulePath).openStream();
+    String ruleYaml = IOUtils.toString(ruleInputStream, StandardCharsets.UTF_8);
+    ruleInputStream.close();
+
     Path semgrepRuleFile = Files.createTempFile("semgrep", ".yaml");
     Files.write(semgrepRuleFile, ruleYaml.getBytes(StandardCharsets.UTF_8));
 
